Changelog
=========

Version 1.68
	Improved 'Recover lost objects' dialog. Now all lost objects can be found and finding a specific commit should be much easier now.
	Use Environment.NewLine instead of "\n".
	Fixed a bug in default .gitignore file, it would show the [Db]ebug directory. It should be [Dd]ebug directory ofcourse.
	Added Resharper directories to .gitignore file.

Version 1.67
	Fixed exception when AutoCRLF is left empty
	Clicking 'Rescan changes' twice no longer results in 
	Mergeconflict dialog closes when there are no mergeconflicts left
	Pull dialog closes after successful pull
	Delete branch from revision grid now uses the correct dialog
	Fixed spelling mistake in warning dialog for 'Amend to last commit'
	Packed with Git-1.6.3.2
	
Version 1.66
	Fixed exception when AutoCRLF is left empty
	
Version 1.65
	Option added to order revision by date or by branch	
	Patches can be mailed from the format-patch dialog
	Global AutoCRLF now has three options: true, false, input
	Bug solved: When an item is staged when opening the commit dialog, unstaging it always marked it as untracked
	
Version 1.64
	Commits are now ordered by date
	Fixed bug in commit dialog

Version 1.63
	Added file filter to revision graph filter
	Shortened title of browse window
	Added checkout revision context menu in the Browse list
	Added a Recent Repositories submenu in the File menu
	Added commit hash to commit info dialogs
	Close solve mergeconflicts dialog automaticly after all conflicts are solved
	Commit message is now remembered when commit dialog is closed without making the commit
	Packed with Git-1.6.3

Version 1.62
	Fixed exception when right click on gridheaders in revision log
	Last selection and scroll position in revision log are remembered
	Added "Delete brach" function to context menu revision log
	Packed with Git-1.6.2.2

Version 1.61
	Fixed bug that mergeconflicts of files listed in .gitignore are hidden

Version 1.60
	Fixed bug in Manage remotes dialog

Version 1.59